schema_coordinate/test/corpus/coordinates.txt
========================================
Type
========================================

User

----------------------------------------

(source_file
  (type_coordinate
    (name)))

========================================
Member
========================================

User.name

----------------------------------------

(source_file
  (member_coordinate
    (name)
    (name)))

========================================
Argument
========================================

Query.user(id:)

----------------------------------------

(source_file
  (argument_coordinate
    (name)
    (name)
    (name)))

========================================
Directive
========================================

@deprecated

----------------------------------------

(source_file
  (directive_coordinate
    (name)))

========================================
Directive argument
========================================

@deprecated(reason:)

----------------------------------------

(source_file
  (directive_argument_coordinate
    (name)
    (name)))

========================================
Whitespace is not allowed
:error
========================================

User . name

----------------------------------------


